Controller behaviour fixes
Issue-ID: CCSDK-4090
